--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/material": "^5.15.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.1",
+    "swiper": "^11.0.7",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
